tests/sksl/errors/OverflowShortLiteral.glsl
### Compilation failed:

error: 1: integer is out of range for type 'short': -32769
error: 2: integer is out of range for type 'short': 32768
error: 3: integer is out of range for type 'short': 32768
3 errors
